# otus_grpc_python

./: README.md  protobuf_example.py
client/: client.py  pyproject.toml  stream_client.py
nginx-proxy/: sample.conf
proto/: compile.sh  grpc_compile.sh  service.proto
proto/compiled/: simple_pb2.py
server/: pyproject.toml  server.py  service_pb2.py  service_pb2_grpc.py
